--- a/styles/main.css
+++ b/styles/main.css
@@ -15,4 +15,9 @@ textarea {
 h1,h2,h3,h4,h5,h6 {
   font-family: "Patua One", serif;
   letter-spacing: 2px;
+  margin-left: 5px;
+}
+
+body {
+    background-color:cornflowerblue;
 }
